# SDLLazyFoo

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/: Dot.h  MyTexture.h  MyTimer.h  Particle.h  helpers.h  log_error.h  main.h  res_path.h
src/: Dot.cc  MyTexture.cc  MyTimer.cc  Particle.cc  log_error.cc  main.cc  res_path.cc
